added qrcode in 7 homework

--- a/2016.03.15_lesson7/homework/flask-json/templates/home.html
+++ b/2016.03.15_lesson7/homework/flask-json/templates/home.html
@@ -4,6 +4,7 @@
 
 <div class="content">
     {% for blog_post in blog_posts %}
+        <p> <img src="data:image/png;base64,{{blog_post.base64_qr_code}}"/> </p>
         <p> Author -- {{blog_post.author}} at {{blog_post.date}}.
             Title -- {{blog_post.title}}.
         </p>
