--- a/2016.05.06_lesson21/homework/djago_api/study/templates/study/_base.html
+++ b/2016.05.06_lesson21/homework/djago_api/study/templates/study/_base.html
@@ -28,6 +28,7 @@
               <li><a href="{% url 'study:lessons' %}">Lessons</a></li>
               <li><a href="{% url 'study:themes' %}">Themes</a></li>
               <li><a href="{% url 'rest_api:api-root' %}">REST API</a></li>
+              <li><a href="{% url 'api_get:index' %}">Get from api</a></li>
           </ul>
         </div>
       </div>
